--- a/resources/youtube_deep_recall_model.cfg
+++ b/resources/youtube_deep_recall_model.cfg
@@ -10,7 +10,7 @@ info_id_dim = 99
 info_embedding_size = 50
 attribute_embedding_size = 5
 max_sequence_size = 50
-full_connection_layer_list = [128, 64]
+full_connection_layer_list = [128, 50]
 
 [feature_index_type]
 slot = (0, "single", "discrete", "slot")
@@ -22,8 +22,8 @@ user_worked_years = (5, "single", "discrete", "user_worked_years")
 user_age_split = (6, "single", "discrete", "user_age_split")
 user_target_cate_ids = (7, "multi", "discrete", "cate_id")
 user_portrait_tags = (8, "multi", "discrete", "jbn")
-clicked_info_id_list = (9, "sequence", "discrete", "input_info_id")
-delivered_info_id_list = (10, "sequence", "discrete", "input_info_id")
+clicked_info_id_list = (9, "sequence", "discrete", "info_input_embeddings")
+delivered_info_id_list = (10, "sequence", "discrete", "info_input_embeddings")
 info_id = (11, "label", "discrete", "none")
 click = (12, "label", "discrete", "none")
 delivery = (13, "label", "discrete", "none")
@@ -37,5 +37,3 @@ user_worked_years = 9
 user_age_split=18
 cate_id = 1547
 jbn = 10999
-input_info_id = 0
-output_info_id = 0
