--- a/resources/im_click_rate_prediction_model.cfg
+++ b/resources/im_click_rate_prediction_model.cfg
@@ -2,11 +2,8 @@
 epoch_num = 10
 batch_size = 64
 learn_rate = 1.0
-info_id_dim = 99
-info_embedding_size = 50
 default_attribute_embedding_size = 5
-max_sequence_size = 50
-full_connection_layer_list = [128, 50]
+full_connection_layer_list = [128, 50, 1]
 
 [feature_index_type]
 slot = (0, "single", "discrete", "slot")
@@ -18,9 +15,6 @@ user_worked_years = (5, "single", "discrete", "user_worked_years")
 user_age_split = (6, "single", "discrete", "user_age_split")
 user_target_cate_ids = (7, "multi", "discrete", "cate_id")
 user_portrait_tags = (8, "multi", "discrete", "jbn")
-clicked_info_id_list = (9, "sequence", "discrete", "info_input_embeddings")
-delivered_info_id_list = (10, "sequence", "discrete", "info_input_embeddings")
-info_id = (11, "label", "discrete", "none")
 click = (12, "label", "discrete", "none")
 delivery = (13, "label", "discrete", "none")
 
