--- a/resources/im_click_rate_prediction_model.cfg
+++ b/resources/im_click_rate_prediction_model.cfg
@@ -3,4 +3,4 @@ epoch_num = 3
 batch_size = 64
 learn_rate = 1.0
 default_attribute_embedding_size = 5
-full_connection_layer_list = [128, 50, 1]
+full_connection_layer_list = [128, 1]
