--- a/resources/im_click_rate_prediction_model.cfg
+++ b/resources/im_click_rate_prediction_model.cfg
@@ -1,6 +1,6 @@
 [model_hyper_parameters]
 epoch_num = 3
-batch_size = 64
-learn_rate = 1.0
+batch_size = 128
+learn_rate = 0.33
 default_attribute_embedding_size = 5
-full_connection_layer_list = [128, 1]
+full_connection_layer_list = [1]
