--- a/resources/im_wide_and_deep_model.cfg
+++ b/resources/im_wide_and_deep_model.cfg
@@ -3,5 +3,5 @@ epoch_num = 5
 batch_size = 128
 learn_rate = 0.01
 default_attribute_embedding_size = 5
-full_connection_layer_list = [128, 1]
+full_connection_layer_list = [128, 64, 1]
 shuffle_buffer_size = 1000000
